--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./src/service/service.js",
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/",
-    "server": "nodemon ./src/service/service.js --server 3003"
+    "server": "nodemon ./src/service/service.js --server 3003",
+    "start-front-server": "nodemon ./src/express/index.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "chalk": "^3.0.0",
+    "express": "4.17.1",
     "moment": "^2.24.0"
   }
 }
